--- a/hyprland/waybar/style.css
+++ b/hyprland/waybar/style.css
@@ -12,8 +12,10 @@ window#waybar {
   color: #c5c8c6;
   margin: 3px 0px 3px 0px;
   padding: 5px 5px 5px 8px; 
+  /*
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
+  */
 }
 
 #upower {
@@ -39,17 +41,66 @@ window#waybar.empty #window {
 	/*opacity: 0.0;*/
 }
 
-#custom-power {
+#group-power {
   margin: 3px 3px 3px 3px;
-  padding: 5px 10px 5px 0px;
-  border-top-left-radius: 2px;
-  border-bottom-left-radius: 2px;
-  /*color: #FFF;*/
+  padding: 0px 0px 0px 0px;
+  background: #1d1f21;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  color: #c5c8c6;
+}
+
+#custom-quit {
+  padding: 0px 5px 0px 5px;
+  background: #1d1f21;
+}
+
+#custom-quit:hover {
+  color: #666666;
+}
+
+#custom-reboot {
+  margin: 0px 0px 0px 0px;
+  padding: 0px 5px 0px 8px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background: #1d1f21;
+}
+
+#custom-reboot:hover {
+  color: #666666;
+}
+
+#custom-shutdown {
+  padding: 0px 5px 0px 5px;
+  background: #1d1f21;
+}
+
+#custom-shutdown:hover {
+  color: #666666;
+}
+
+#custom-suspend {
+  margin: 0px 5px 0px 0px;
+  padding: 0px 5px 0px 5px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background: #1d1f21;
+}
+
+#custom-suspend:hover {
+  color: #666666;
+}
+
+.drawer {
+  color: #c5c8c6;
 }
 
 #clock {
-  margin: 3px 3px 3px 3px;
-  padding: 5px 8px 5px 8px;
+  margin: 0px 3px 0px 3px;
+  padding: 0px 5px 0px 5px;
   color: #FFF;
   background: #1d1f21;
   border-top-left-radius: 10px;
@@ -73,8 +124,8 @@ window#waybar.empty #window {
   color: #c5c8c6;
   margin: 3px 0px 3px 0px;
   padding: 5px 5px 5px 8px; 
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  /*border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;*/
 }
 
 #power-profiles-daemon {
@@ -82,6 +133,15 @@ window#waybar.empty #window {
   background: #1d1f21;
   padding: 5px;
   color: #c5c8c6;
+}
+
+#custom-news {
+  background: #1d1f21;
+  color: #c5c8c6;
+  margin: 3px 0px 3px 0px;
+  padding: 5px 5px 5px 8px; 
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 menu {
