--- a/hyprland/waybar/style.css
+++ b/hyprland/waybar/style.css
@@ -124,8 +124,8 @@ window#waybar.empty #window {
   color: #c5c8c6;
   margin: 3px 0px 3px 0px;
   padding: 5px 5px 5px 8px; 
-  /*border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;*/
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 #power-profiles-daemon {
